# yelp-ai-assistant

./: README.md  config.py  data_loader.py  evaluate.py  prompts.py  pyproject.toml  run_all.py  task1_zero_few_shot.py  task2_cot_vs_direct.py  task3_multi_objective.py  task4_domain_shift.py
results/: task1_few_shot.csv  task1_metrics.json  task1_zero_shot.csv  task2_cot.csv  task2_direct.csv  task2_metrics.json  task3_metrics.json  task3_multi_obj.csv  task4_adversarial.csv  task4_metrics.json
